--- a/popup.html
+++ b/popup.html
@@ -4,31 +4,66 @@
   <meta charset="utf-8">
   <style>
     body {
-      width: 200px;
-      padding: 10px;
-      font-family: Arial, sans-serif;
+      width: 220px;
+      padding: 16px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      margin: 0;
+    }
+    .container {
+      text-align: center;
     }
     .status {
-      margin-bottom: 10px;
-      text-align: center;
+      margin-bottom: 16px;
+      font-size: 16px;
+      font-weight: 600;
     }
     .toggle {
       width: 100%;
-      padding: 8px;
-      background: #4a00e0;
+      padding: 12px;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
       color: white;
-      border: none;
-      border-radius: 4px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 12px;
       cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      transition: all 0.3s ease;
     }
-    .toggle.off {
-      background: #ff416c;
+    .toggle:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .gesture-list {
+      margin-top: 16px;
+      text-align: left;
+      font-size: 12px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 12px;
+      border-radius: 8px;
+    }
+    .gesture-list div {
+      margin: 4px 0;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="status">Gestures: <span id="status-text">ON</span></div>
-  <button id="toggle-btn" class="toggle">Disable</button>
+  <div class="container">
+    <div class="status">Gestures: <span id="status-text">ON</span></div>
+    <button id="toggle-btn" class="toggle">Disable Gestures</button>
+    
+    <div class="gesture-list">
+      <div>👈 Left Open → Play</div>
+      <div>👉 Right Open → Pause</div>
+      <div>✊✊ Both Fists → Toggle Play/Pause</div>
+      <div>👈 Pinch → Seek</div>
+      <div>👉 Pinch → Volume</div>
+    </div>
+  </div>
   
   <script src="popup.js"></script>
 </body>
