--- a/new/popup.html
+++ b/new/popup.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <style>
     body {
-      width: 300px;
+      width: 320px;
       padding: 20px;
       font-family: 'Segoe UI', Arial, sans-serif;
       background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
@@ -74,7 +74,7 @@
     <div class="gesture-list">
       <div>👈 Left Open Hand → Play Video</div>
       <div>👉 Right Open Hand → Pause Video</div>
-      <div>✊✊ Both Fists → Toggle Play/Pause</div>
+      <div>✊✊ Both Fists → Toggle Fullscreen</div>
       <div>👈 Pinch & Drag → Seek Video</div>
       <div>👉 Pinch & Drag → Adjust Volume</div>
       <div>👈 Double Tap → -10 Seconds</div>
