--- a/new/popup.html
+++ b/new/popup.html
@@ -56,6 +56,11 @@
       align-items: center;
       gap: 10px;
     }
+    .keyboard-info {
+      font-size: 11px;
+      margin-top: 10px;
+      opacity: 0.8;
+    }
   </style>
 </head>
 <body>
@@ -79,6 +84,10 @@
       <div>👉 Pinch & Drag → Adjust Volume</div>
       <div>👈 Double Tap → -10 Seconds</div>
       <div>👉 Double Tap → +10 Seconds</div>
+    </div>
+    
+    <div class="keyboard-info">
+      Keyboard: Space=Play/Pause, Arrows=Seek/Volume, F=Fullscreen
     </div>
   </div>
   
